# claude-orchestrator

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: backtest-thresholds.json  routing-keywords.json  settings.json
.claude/agents/: bot-engineer.md  codex-debugger.md  data-engineer.md  ea-developer.md  general-purpose.md  infra-ops.md  ml-engineer.md  quant-analyst.md  strategist.md
.claude/docs/: CODEX_HANDOFF_PLAYBOOK.md  DESIGN.md
.claude/docs/reviews/: codex-meta-review-2026-05-09.md
.claude/hooks/: agent-router.py  check-codex-before-write.py  error-to-codex.py  lint-on-save.py  live-trading-gate.py  log-cli-tools.py  post-backtest-analysis.py  post-bot-execution.py  post-implementation-review.py  suggest-gemini-research.py
.claude/rules/: bot-development.md  codex-delegation.md  coding-principles.md  deployment.md  document-lifecycle.md  financial-domain.md  gemini-delegation.md  language.md  monitoring.md  multi-strategy.md  risk-management.md  security.md  testing.md
.claude/skills/backtest/: SKILL.md
.claude/skills/bot-deploy/: SKILL.md
.claude/skills/bot-develop/: SKILL.md
.claude/skills/bot-monitor/: SKILL.md
.claude/skills/checkpointing/: SKILL.md
.claude/skills/codex-system/: SKILL.md
.codex/: AGENTS.md  config.toml
.gemini/: GEMINI.md
docker/: Dockerfile.example  docker-compose.example.yml
scripts/: update.sh
src/orchestrator/: registry.py
src/risk/: aggregator.py
tests/: conftest.py
tests/test_orchestrator/: test_registry.py
tests/test_risk/: test_aggregator.py
(+20 files in other folders)
