[project]
name = "financial-trading-orchestrator"
version = "0.1.0"
description = "AI-orchestrated financial trading system: backtesting, strategy design, and EA development"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "backtrader>=1.9",
    "vectorbt>=0.26",
    "ccxt>=4.0",
    "yfinance>=0.2",
    "MetaTrader5>=5.0; sys_platform == 'win32'",
    "python-dotenv>=1.0",
    "pyarrow>=15.0",
    "ta-lib>=0.5; sys_platform != 'darwin' or platform_machine != 'arm64'",
    "ta>=0.11",
    "matplotlib>=3.8",
    "plotly>=5.18",
    "scipy>=1.12",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.9",
    "pandas-stubs>=2.2",
    "types-requests>=2.31",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: long-running tests",
    "integration: requires external API connection",
    "backtest: backtest-related tests",
]
